katars/tests/snaps/snapshots/snap_errors__ret_outside_func.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"ret 1\")"
---
Error: ret outside of function
   ╭─[<test>:1:1]
   │
 1 │ ret 1
   │ ──┬──  
   │   ╰──── ret outside of function
───╯
